--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -4,9 +4,14 @@ on:
   push:
     branches:
       - main
+    # Only run this workflow when frontend files change
+    paths:
+      - 'frontend/**'
   pull_request:
     branches:
       - main
+    paths:
+      - 'frontend/**'
 
 jobs:
   build_and_deploy_job:
