--- a/.github/workflows/deploy-infra.yml
+++ b/.github/workflows/deploy-infra.yml
@@ -10,17 +10,25 @@ jobs:
   deploy:
     name: Deploy Bicep to rg-kidsmath
     runs-on: ubuntu-latest
+    # Required permission for GitHub OIDC token
     permissions:
       contents: read
+      id-token: write
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Login to Azure
-        uses: azure/login@v1
+      - name: Sign in to Azure using OIDC (federated credentials)
+        uses: azure/login@v2
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          # These should be configured as repository secrets and a federated identity
+          # credential must exist on the Service Principal in Entra ID
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          # Optional: enable Azure PowerShell session if you need PowerShell
+          enable-AzPSSession: false
 
       - name: Show current subscription
         run: az account show --output table
