--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -7,6 +7,7 @@ on:
     # Only run this workflow when frontend files change
     paths:
       - 'frontend/**'
+  workflow_dispatch: {}
   pull_request:
     branches:
       - main
